# xmphash

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xmphash_version.hpp.in
include/xmphash/: hasher.hpp  xplat.hpp
src/: hasher.cpp  main.cpp
src/xplat/: io.cpp
